--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -28,10 +28,9 @@
     <header>
       <div class="inner">
         <a href="{{ '/' | absolute_url }}">
-          <h1>{{ site.title | default: site.github.repository_name }}</h1>
+          <h1>{{ site.title }}</h1>
         </a>
-        <h2>{{ site.description | default: site.github.project_tagline }}</h2>
-        <a href="https://github.com/rodolfograve" class="button"><small>Follow me on</small> GitHub</a>
+        <h2>{{ site.description }}</h2>
       </div>
     </header>
 
@@ -54,22 +53,7 @@
             </a>
           {% endif %}
         </aside>
-        <script>
-            var disqus_config = function () {
-                this.page.url = "{{site.url}}{{ page.url }}";  // Replace PAGE_URL with your page's canonical URL variable
-                this.page.identifier = "{{ page.title }}"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-            };
-
-            (function() { // DON'T EDIT BELOW THIS LINE
-                var d = document, s = d.createElement('script');
-                s.src = 'https://rodolfograve.disqus.com/embed.js';
-                s.setAttribute('data-timestamp', +new Date());
-                (d.head || d.body).appendChild(s);
-            })();
-        </script>
-        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
       </div>
     </div>
-    <script id="dsq-count-scr" src="//rodolfograve.disqus.com/count.js" async></script>
   </body>
 </html>
